exports[`test should render a default component 1`] = `
<header
  className="terraClinical-Header">
  <h1
    className="terraClinical-Header-title" />
</header>
`;

exports[`test should render a header with all content 1`] = `
<header
  className="terraClinical-Header">
  <Arrange
    align="center"
    fill={
      <h1
        className="terraClinical-Header-title">
        Title
      </h1>
    }
    fitEnd={
      <div>
        end content
      </div>
    }
    fitStart={
      <div>
        start content
      </div>
    } />
</header>
`;

exports[`test should render a header with content on the left 1`] = `
<header
  className="terraClinical-Header">
  <Arrange
    align="center"
    fill={
      <h1
        className="terraClinical-Header-title" />
    }
    fitEnd={null}
    fitStart={
      <div>
        start content
      </div>
    } />
</header>
`;

exports[`test should render a header with content on the right 1`] = `
<header
  className="terraClinical-Header">
  <Arrange
    align="center"
    fill={
      <h1
        className="terraClinical-Header-title" />
    }
    fitEnd={
      <div>
        end content
      </div>
    }
    fitStart={null} />
</header>
`;

exports[`test should render a header with title only 1`] = `
<header
  className="terraClinical-Header">
  <h1
    className="terraClinical-Header-title">
    title
  </h1>
</header>
`;
